test/files/errors/functionNotDefined.jg
lol int () {
    x int = () lolita;
    x return;
}

_main int () {

    lolita int () {
        42 return;
    }
    
    () lol return;
}